@@ -1,0 +1,3 @@
+#...
+0*20000008 d __rtinit
+#pass
